--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -21,14 +21,15 @@
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
             </svg></button>
         </div>
-        <div class="weather">
+        <div class="weather loading">
             <h2 class="city">Météo à Courzieu</h2>
             <h1 class="temp">20°C</h1>
-            <img src="" alt="" class="icon">
-            <div class="description">Ensoleillé</div>
-            <div class="humidity">Moyenne</div>
-            <div class="wind">5 km/h</div>
+            <div class="flex">
+            <img src="http://openweathermap.org/img/wn/04d.png" alt="" class="icon">
+            </div>
+            <div class="humidity">Humidité: Moyenne</div>
+            <div class="wind">Vent: 5 km/h</div>
         </div>
-    </div>
+
 </body>
 </html>
